// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkRadioIcon should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 20,
        "borderWidth": 2,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 10,
          "height": 10,
          "width": 10,
        },
      ]
    }
  />
</View>
`;

exports[`Android BpkRadioIcon should render correctly with "selected" 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgb(230, 228, 235)",
        "borderRadius": 20,
        "borderWidth": 2,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
      Object {
        "borderColor": "rgb(0, 178, 214)",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 10,
          "height": 10,
          "width": 10,
        },
        Object {
          "backgroundColor": "rgb(0, 178, 214)",
        },
      ]
    }
  />
</View>
`;
